Changes in Account - Buttons (New Sales Lead & New After Sales Lead), Token.properties, Case - Button (New Sales Lead), Case Approval Process

--- a/src/main/transformations/dev_sb_asia_cikorea/token.properties
+++ b/src/main/transformations/dev_sb_asia_cikorea/token.properties
@@ -1,5 +1,8 @@
 WORKFLOW_INTEGRATION_USER=arun.iyer.ntt@mbj.daimler-apac.com.cikorea
 
+OBJECT_ACCOUNT_COMPANY_RECORTYPE_ID=012280000000f0p
+OBJECT_ACCOUNT_PERSON_ACCOUNT_RECORTYPE_ID=012280000000f14
+
 OBJECT_CAMPAIGN_WEBLINK_CAC_CAMPAIGN_RECORD_TYPE_ID=012p00000004ISQ
 OBJECT_CAMPAIGN_WEBLINK_COMPLEX_EXECUTION_RECORD_TYPE_ID=012p00000004IST
 OBJECT_CAMPAIGN_WEBLINK_SIMPLE_EXECUTION_RECORD_TYPE_ID=012p00000004ISS
@@ -8,6 +11,7 @@ CENTRAL_OFFICE_QUEUE_ID=00Gp0000000Mbrv
 
 OBJECT_LEAD_ID=/a13/e
 OBJECT_LEAD_SALES_RECORD_TYPE_ID=012280000006I7s
+OBJECT_LEAD_AFTERSALES_RECORD_TYPE_ID=01I28000000vWSj
 OBJECT_LEAD_FIRSTNAME_ID=00N2800000A9Ck9
 OBJECT_LEAD_LASTNAME_ID=00N2800000A9Ckk
 OBJECT_LEAD_NATIVE_FIRSTNAME_ID=00N2800000A9Ck8
