Fix for UATKorea sandbox deployment

--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -488,3 +488,4 @@ post:Profile:'Premier Support User':AAABVnl+K1m=
 post:CustomField:Vehicle_Relationship__c.Used_Warranty_Apply_Status__c:AAABVtswVng=
 post:Queue:test_CAC_Surpervisor:AABBVtswVng
 post:Queue:test_CRM_Approver:AABBVtswVng
+post:CustomField:Retail_Task__c.Supplement_normal_interest_rates__c:AAABUtKTvDq=
