--- a/build.xml
+++ b/build.xml
@@ -316,7 +316,7 @@
 				<sf:include name="VehicleRelationshipHelperJPTest"/>
 				<sf:include name="CaseTriggerHandlerJP"/>
 				<sf:include name="TaskTriggerHandlerJP"/>
-				<sf:include name="TaskTriggerHandlerKr"/>
+				<sf:include name="TaskTriggerHandlerKR"/>
 				<sf:include name="LeadHelperJP"/>
 				<sf:include name="LeadHelperJPTest"/>
 				<sf:include name="TestTriggerHandler"/>
