--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -489,3 +489,46 @@ post:CustomField:Vehicle_Relationship__c.Used_Warranty_Apply_Status__c:AAABVtswV
 post:Queue:test_CAC_Surpervisor:AABBVtswVng
 post:Queue:test_CRM_Approver:AABBVtswVng
 post:CustomField:Retail_Task__c.Supplement_normal_interest_rates__c:AAABUtKTvDq=
+#post:Role:AfterSales_Assistant_Manager:AAABTIBnWeA=
+#post:Role:AfterSales_Deputy_Director:AAABTIBnWeB=
+#post:Role:AfterSales_Deputy_Manager:AAABTIBnWeC=
+#post:Role:AfterSales_Director:AAABTIBnWeD=
+#post:Role:AfterSales_Executive:AAABTIBnWeE=
+#post:Role:AfterSales_Manager:AAABTIBnWeF=
+#post:Role:AfterSales_Vice_President:AAABTIBnWeG=
+#post:Role:Are_Deputy_Manager:AAABTIBnWeH=
+#post:Role:Area_Assistant_Manager:AAABTIBnWeI=
+#post:Role:Area_Director:AAABTIBnWeJ=
+#post:Role:Area_Executive:AAABTIBnWeK=
+#post:Role:Area_Manager:AAABTIBnWeL=
+#post:Role:CRM_Dept_Deputy_Manager:AAABTIBnWeN=
+#post:Role:CRM_Dept_Director:AAABTIBnWeO=
+#post:Role:CRM_Dept_Executive:AAABTIBnWeP=
+#post:Role:CRM_Dept_Manager:AAABTIBnWeQ=
+#post:Role:Call_Center_Director:AAABTIBnWeR=
+#post:Role:Call_Center_Manager:AAABTIBnWeS=
+#post:Role:Call_Center_Operator1:AAABTIBnWeT=
+#post:Role:Data_Manager_Assistant_Manager:AAABTIBnWeU=
+#post:Role:Data_Manager_Deputy_Director:AAABTIBnWeW=
+#post:Role:Data_Manager_Deputy_Manager:AAABTIBnWeV=
+#post:Role:Data_Manager_Director:AAABTIBnWeX=
+#post:Role:Data_Manager_Executive:AAABTIBnWeY=
+#post:Role:Data_Manager_Manager:AAABTIBnWeZ=
+#post:Role:Data_Manager_Vice_President:AAABTIBnSeM=
+#post:Role:Executive:AAABTIBnTeM=
+#post:Role:IT_Dept_Assistant_Manager:AAABTIBnUeM=
+#post:Role:IT_Dept_Deputy_Director:AAABTIBnVeM=
+#post:Role:IT_Dept_Director:AAABTIBoWeM=
+#post:Role:IT_Dept_Executive:AAABTIBpWeM=
+#post:Role:IT_Dept_Manager:AAABTIBnWqM=
+#post:Role:MBK:AAABTIBnAeM=
+#post:Role:MBK_Managements:AAABTIBnBeM=
+#post:Role:Marketing_Assistant_Manager:AAABTIBnCeM=
+#post:Role:Marketing_Deputy_Manager:AAABTIBnDeM=
+#post:Role:Marketing_Executive:AAABTIBnGeM=
+#post:Role:Marketing_Manager:AAABTIBnFeM=
+#post:Role:Sales_Assistant_Manager:AAABTIBnHeM=
+#post:Role:Sales_Deputy_Director:AAABTIBnIeM=
+#post:Role:Sales_Deputy_Manager:AAABTIBnJeM=
+#post:Role:Sales_Manager:AAABTIBnKeM=
+#post:Role:Sales_Vice_President:AAABTIBnLeM=
