--- a/build.xml
+++ b/build.xml
@@ -275,7 +275,7 @@
 				<sf:include name="TestUserCreate"/>
 				<sf:include name="CaseHelperJP"/>
 				<sf:include name="CaseHelperJPTest"/>
-				<sf:include name="TaskHelperKr"/>
+				<sf:include name="TaskHelperKR"/>
 				<sf:include name="GenerateAndAttachPDF"/>
 				<sf:include name="UtilTestData"/>
 				<sf:include name="UtilRecordTypeTest"/>
