Adding old MBK sharing rules to destructive file to be removed from orgs

--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -577,3 +577,9 @@ post:Role:Sales_Manager:AAABTIBnKeM=
 post:Role:Sales_Deputy_Director:AAABTIBnIeM=
 post:Role:Sales_Vice_President:AAABTIBnLeM=
 post:Role:MBK_Managements:AAABTIBnBeM=
+post:AccountCriteriaBasedSharingRule:MBK_Account_Record_Permission_to_All_Users:AAABTIBnBeM=
+post:AccountCriteriaBasedSharingRule:MBK_Campaign_Record_Permission_to_All_Users:AAABTIBnBeM=
+post:AccountCriteriaBasedSharingRule:MBK_Case_Record_Permission_to_All_Users:AAABTIBnBeM=
+post:AccountCriteriaBasedSharingRule:MBK_Survey_Record_Permission_to_All_Users:AAABTIBnBeM=
+post:AccountCriteriaBasedSharingRule:MBK_Vehicle_Relationship_Record_Permission_to_All_Users:AAABTIBnBeM=
+post:AccountCriteriaBasedSharingRule:MBK_Vehicle_Record_Permission_to_All_Users:AAABTIBnBeM=
