Adding old MBK sharing rules to destructive file to be removed from orgs

--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -581,5 +581,6 @@ post:AccountCriteriaBasedSharingRule:MBK_Account_Record_Permission_to_All_Users:
 post:CampaignCriteriaBasedSharingRule:MBK_Campaign_Record_Permission_to_All_Users:AAABTIBnBeM=
 post:CaseCriteriaBasedSharingRule:MBK_Case_Record_Permission_to_All_Users:AAABTIBnBeM=
 post:CustomObjectCriteriaBasedSharingRule:Survey__c.MBK_Survey_Record_Permission_to_All_Users:AAABTIBnBeM=
+post:CustomObjectCriteriaBasedSharingRule:Survey_Taken__c.MBK_Survey_Record_Permission_to_All_Users:AAABTIBnBeM=
 post:CustomObjectCriteriaBasedSharingRule:Vehicle_Relationship__c.MBK_Vehicle_Relationship_Record_Permission_to_All_Users:AAABTIBnBeM=
 post:CustomObjectCriteriaBasedSharingRule:Vehicle__c.MBK_Vehicle_Record_Permission_to_All_Users:AAABTIBnBeM=
