--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -578,7 +578,7 @@ post:Role:Sales_Deputy_Director:AAABTIBnIeM=
 post:Role:Sales_Vice_President:AAABTIBnLeM=
 post:Role:MBK_Managements:AAABTIBnBeM=
 post:AccountCriteriaBasedSharingRule:MBK_Account_Record_Permission_to_All_Users:AAABTIBnBeM=
-post:CampaignCriteriaBasedSharingRule:MBK_Campaign_Record_Permission_to_All_Users:AAABTIBnBeM=
+pre:CampaignCriteriaBasedSharingRule:MBK_Campaign_Record_Permission_to_All_Users:AAABTIBnBeM=
 post:CaseCriteriaBasedSharingRule:MBK_Case_Record_Permission_to_All_Users:AAABTIBnBeM=
 post:CustomObjectCriteriaBasedSharingRule:Survey__c.MBK_Survey_Record_Permission_to_All_Users:AAABTIBnBeM=
 post:CustomObjectCriteriaBasedSharingRule:Survey_Taken__c.MBK_Survey_Record_Permission_to_All_Users:AAABTIBnBeM=
