Adding MBK specific role changes

--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -586,3 +586,4 @@ post:CustomObjectCriteriaBasedSharingRule:Vehicle_Relationship__c.MBK_Vehicle_Re
 post:CustomObjectCriteriaBasedSharingRule:Vehicle__c.MBK_Vehicle_Record_Permission_to_All_Users:AAABTIBnBeM=
 post:Role:Deputy_Director:AAABTIKTLeM=
 post:Role:Assistant_Manager :AAABPlNnBeM=
+post:Role:Deputy_Manager:AAABTIKTLeM=
