--- a/src/main/transformations/dev_sb_asia_cikorea/token.properties
+++ b/src/main/transformations/dev_sb_asia_cikorea/token.properties
@@ -36,6 +36,7 @@ OBJECT_LEAD_ACCOUNT=CF00Np0000000ODOS
 OBJECT_LEAD_ACCOUNT_LKID=CF00Np0000000ODOS_lkid
 OBJECT_LEAD_OBJECTID=01Ip00000008XuX
 OBJECT_LEAD_TAB_ID=/a0t/e
+OBJECT_LEAD_UCID=00N2800000A9CnE
 
 OBJECT_CAMPAIGN_LEAD_WEBLINK_OBJECT_KEYPREFIX=a0r
 OBJECT_CAMPAIGN_LEAD_WEBLINK_LEAD_FIELD_ID=00Np0000000ODMl
