--- a/src/main/transformations/dev_sb_asia_dev4/token.properties
+++ b/src/main/transformations/dev_sb_asia_dev4/token.properties
@@ -27,6 +27,7 @@ OBJECT_LEAD_ACCOUNT=CF00NO0000001wS4x
 OBJECT_LEAD_ACCOUNT_LKID=CF00NO0000001wS4x_lkid
 OBJECT_LEAD_OBJECTID=01IO0000000A8P0
 OBJECT_LEAD_TAB_ID=/a13/e
+OBJECT_LEAD_UCID=00N2800000A9CnE
 
 OBJECT_CAMPAIGN_WEBLINK_CAC_CAMPAIGN_RECORD_TYPE_ID=012O000000058VO
 OBJECT_CAMPAIGN_WEBLINK_COMPLEX_EXECUTION_RECORD_TYPE_ID=012O000000058VR
