--- a/src/main/transformations/dev_sb_asia_TestKorea/token.properties
+++ b/src/main/transformations/dev_sb_asia_TestKorea/token.properties
@@ -30,6 +30,7 @@ OBJECT_LEAD_ACCOUNT=CF00NN0000001NLC9
 OBJECT_LEAD_ACCOUNT_LKID=CF00NN0000001NLC9_lkid
 OBJECT_LEAD_OBJECTID=01IN00000005ODE
 OBJECT_LEAD_TAB_ID=/a13/e
+OBJECT_LEAD_UCID=00N2800000A9CnE
 
 OBJECT_CAMPAIGN_WEBLINK_CAC_CAMPAIGN_RECORD_TYPE_ID=012280000006I7d
 OBJECT_CAMPAIGN_WEBLINK_COMPLEX_EXECUTION_RECORD_TYPE_ID=012N0000000957p
