--- a/src/main/transformations/dev_sb_asia_uatkorea/token.properties
+++ b/src/main/transformations/dev_sb_asia_uatkorea/token.properties
@@ -5,6 +5,7 @@ OBJECT_ACCOUNT_PERSON_ACCOUNT_RECORTYPE_ID=012280000000f14
 
 OBJECT_LEAD_ID=/a13/e
 OBJECT_LEAD_SALES_RECORD_TYPE_ID=012N0000000957x
+OBJECT_LEAD_AFTERSALES_RECORD_TYPE_ID=012280000006I7q
 OBJECT_LEAD_FIRSTNAME_ID=00NN0000001NLCq
 OBJECT_LEAD_LASTNAME_ID=00NN0000001NLDR
 OBJECT_LEAD_NATIVE_FIRSTNAME_ID=00NN0000001NLCp
