--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -534,3 +534,5 @@ post:CustomField:Vehicle_Relationship__c.Used_Warranty_Apply_Status__c:AAABVtswV
 post:Queue:test_CAC_Surpervisor:AABBVtswVng
 post:Queue:test_CRM_Approver:AABBVtswVng
 post:CustomField:Retail_Task__c.Supplement_normal_interest_rates__c:AAABUtKTvDq=
+post:CustomField:Retail_Task__c.Related_Contact_2__c:AAABV5Q+wnI=
+post:CustomField:Retail_Task__c.Related_Contact_3__c:AAABV5Q+xSA=
