Changes in Distructive File

--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -587,3 +587,4 @@ post:CustomObjectCriteriaBasedSharingRule:Vehicle__c.MBK_Vehicle_Record_Permissi
 post:Role:Deputy_Director:AAABTIKTLeM=
 post:Role:Assistant_Manager :AAABPlNnBeM=
 post:Role:Deputy_Manager:AAABTIKTLeM=
+pre:CustomField:Lead__c.UCID__c:AAABV5jnxDM=
