--- a/build.xml
+++ b/build.xml
@@ -135,6 +135,7 @@
 				<sf:include name="Retail_Task__c"/>
 				<sf:include name="Account_Link__c"/>
 				<sf:include name="SSI__c"/>
+				<sf:include name="AreaCodeTranslation__mdt"/>
 			</sf:typeset>
 			<sf:typeset name="pages">
 			   <sf:include name="TerminateVehicleRelationship"/>
