--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -536,3 +536,4 @@ post:Queue:test_CRM_Approver:AABBVtswVng
 post:CustomField:Retail_Task__c.Supplement_normal_interest_rates__c:AAABUtKTvDq=
 post:CustomField:Retail_Task__c.Related_Contact_2__c:AAABV5Q+wnI=
 post:CustomField:Retail_Task__c.Related_Contact_3__c:AAABV5Q+xSA=
+post:CustomField:Lead__c.Purchased_VIN__c:AAABV5Q+xXA=
