deleted field in user object

--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -537,3 +537,4 @@ post:CustomField:Retail_Task__c.Supplement_normal_interest_rates__c:AAABUtKTvDq=
 post:CustomField:Retail_Task__c.Related_Contact_2__c:AAABV5Q+wnI=
 post:CustomField:Retail_Task__c.Related_Contact_3__c:AAABV5Q+xSA=
 post:CustomField:Lead__c.Purchased_VIN__c:AAABV5Q+xXA=
+post:CustomField:User.DMS_User_ID__c:AAABV5Q+xXy=
