--- a/build.xml
+++ b/build.xml
@@ -297,6 +297,7 @@
 				<sf:include name="TriggerDMRequestTriggerHandlerJP"/>
 				<sf:include name="DMRequestHelperJP"/>
 				<sf:include name="DMRequestHelperJPTest"/>
+				<sf:include name="LeadUtil"/>
 				<sf:include name="TriggerLeadTriggerHandlerKR"/>
 				<sf:include name="TriggerLeadTriggerHandlerJP"/>
 				<sf:include name="TriggerLeadTriggerHandler"/>
