Added destructive file

--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -566,12 +566,12 @@ post:Role:AfterSales_Deputy_Manager:AAABTIBnAeM=
 post:Role:AfterSales_Assistant_Manager:AAABTIBnAeM= 
 post:Role:AfterSales_Manager:AAABTIBnAeM= 
 post:Role:AfterSales_Deputy_Director:AAABTIBnAeM=
-post:Role:Marketing_Manager:AAABTIBnFeM=
-post:Role:Marketing_Deputy_Manager:AAABTIBnAeM=
-post:Role:Marketing_Assistant_Manager:AAABTIBnAeM=
-post:Role:Marketing_Executive:AAABTIBnAeM=
-post:Role:Marketing_Assistant_Manager:AAABTIBnCeM=
-post:Role:Marketing_Deputy_Manager:AAABTIBnDeM=
+#post:Role:Marketing_Manager:AAABTIBnFeM=
+#Post:Role:Marketing_Deputy_Manager:AAABTIBnAeM=
+#post:Role:Marketing_Assistant_Manager:AAABTIBnAeM=
+#post:Role:Marketing_Executive:AAABTIBnAeM=
+#post:Role:Marketing_Assistant_Manager:AAABTIBnCeM=
+#post:Role:Marketing_Deputy_Manager:AAABTIBnDeM=
 post:Role:Sales_Assistant_Manager:AAABTIBnHeM=
 post:Role:Sales_Deputy_Manager:AAABTIBnJeM=
 post:Role:Sales_Manager:AAABTIBnKeM=
