Changes related to destructive file

--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -566,18 +566,18 @@ post:Role:AfterSales_Deputy_Manager:AAABTIBnAeM=
 post:Role:AfterSales_Assistant_Manager:AAABTIBnAeM= 
 post:Role:AfterSales_Manager:AAABTIBnAeM= 
 post:Role:AfterSales_Deputy_Director:AAABTIBnAeM=
-#post:Role:Marketing_Manager:AAABTIBnFeM=
-#Post:Role:Marketing_Deputy_Manager:AAABTIBnAeM=
-#post:Role:Marketing_Assistant_Manager:AAABTIBnAeM=
-#post:Role:Marketing_Executive:AAABTIBnAeM=
-#post:Role:Marketing_Assistant_Manager:AAABTIBnCeM=
-#post:Role:Marketing_Deputy_Manager:AAABTIBnDeM=
+post:Role:Marketing_Manager:AAABTIBnFeM=
+Post:Role:Marketing_Deputy_Manager:AAABTIBnAeM=
+post:Role:Marketing_Assistant_Manager:AAABTIBnAeM=
+post:Role:Marketing_Executive:AAABTIBnAeM=
+post:Role:Marketing_Assistant_Manager:AAABTIBnCeM=
+post:Role:Marketing_Deputy_Manager:AAABTIBnDeM=
 post:Role:Sales_Assistant_Manager:AAABTIBnHeM=
 post:Role:Sales_Deputy_Manager:AAABTIBnJeM=
 post:Role:Sales_Manager:AAABTIBnKeM=
 post:Role:Sales_Deputy_Director:AAABTIBnIeM=
 post:Role:Sales_Vice_President:AAABTIBnLeM=
-#post:Role:MBK_Managements:AAABTIBnBeM=
+post:Role:MBK_Managements:AAABTIBnBeM=
 post:AccountCriteriaBasedSharingRule:MBK_Account_Record_Permission_to_All_Users:AAABTIBnBeM=
 pre:CampaignCriteriaBasedSharingRule:MBK_Campaign_Record_Permission_to_All_Users:AAABTIBnBeM=
 post:CaseCriteriaBasedSharingRule:MBK_Case_Record_Permission_to_All_Users:AAABTIBnBeM=
