fix to previous build failure

--- a/src/main/transformations/dev_sb_asia_ci/token.properties
+++ b/src/main/transformations/dev_sb_asia_ci/token.properties
@@ -1,4 +1,4 @@
-WORKFLOW_INTEGRATION_USER=sukumar.rajashekaran.ntt@mbj.daimler-apac.com.asiadev1
+WORKFLOW_INTEGRATION_USER=arun.iyer.ntt@mbj.daimler-apac.com.ci
 
 OBJECT_ACCOUNT_COMPANY_RECORTYPE_ID=012280000000f0p
 OBJECT_ACCOUNT_PERSON_ACCOUNT_RECORTYPE_ID=012280000000f14
@@ -86,5 +86,5 @@ VEHICLE_RELATIONSHIP_FIELD_ID_IN_CASE=00N2800000A9CyM
 WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL=https://crm-salesforce-dev.mercedes-benz.com/webservices/SuspectedDuplicateNotification
 WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL_SEND_CAMPAIGN_ID_EP=https://crm-salesforce-dev.mercedes-benz.com/webservices/CampaignUpdateNotification
 
-SETTING_DEFAULT_CASE_OWNER=sukumar.rajashekaran.ntt@mbj.daimler-apac.com.asiadev1
-SETTING_DEFAULT_CASE_USER=sukumar.rajashekaran.ntt@mbj.daimler-apac.com.asiadev1
+SETTING_DEFAULT_CASE_OWNER=arun.iyer.ntt@mbj.daimler-apac.com.ci
+SETTING_DEFAULT_CASE_USER=arun.iyer.ntt@mbj.daimler-apac.com.ci
