Chnages in UAT token.properties

--- a/src/main/transformations/dev_sb_asia_uatkorea/token.properties
+++ b/src/main/transformations/dev_sb_asia_uatkorea/token.properties
@@ -3,6 +3,17 @@ WORKFLOW_INTEGRATION_USER=arun.iyer.ntt@mbj.daimler-apac.com.uatkorea
 OBJECT_ACCOUNT_COMPANY_RECORTYPE_ID=012280000000f0p
 OBJECT_ACCOUNT_PERSON_ACCOUNT_RECORTYPE_ID=012280000000f14
 
+OBJECT_LEAD_FIRSTNAME_ID=00NO0000001wS5e
+OBJECT_LEAD_LASTNAME_ID=00NO0000001wS6F
+OBJECT_LEAD_NATIVE_FIRSTNAME_ID=00NO0000001wS5d
+OBJECT_LEAD_NATIVE_LASTNAME_ID=00NO0000001wS6E
+OBJECT_LEAD_ADDRESS_ID=00NO0000001wS5i
+OBJECT_LEAD_PHONE_ID=00NO0000001wS70
+OBJECT_LEAD_FAX_ID=00NO0000001wS5V
+OBJECT_LEAD_ACCOUNT_ID=CF00NO0000001wS4x
+OBJECT_LEAD_ACCOUNT_LKID=CF00NO0000001wS4x_lkid
+
+
 OBJECT_LEAD_ID=/a13/e
 OBJECT_LEAD_SALES_RECORD_TYPE_ID=012280000006I7s
 OBJECT_LEAD_AFTERSALES_RECORD_TYPE_ID=012280000006I7q
