--- a/build.xml
+++ b/build.xml
@@ -347,13 +347,18 @@
 				<sf:include name="AccountHelperKR"/>
 				<sf:include name="AccountHelperKRTest"/>
 				<sf:include name="TriggerVehicleRelTriggerHandlerKR"/>
-				<sf:include name="TriggerVehicleRelTriggerHandlerKRTest"/>				
+				<sf:include name="TriggerVehicleRelTriggerHandlerKRTest"/>
+				<sf:include name="RetailTaskTriggerHandlerJP"/>
+				<sf:include name="RetailTaskTriggerHandlerKR"/>
+				<sf:include name="RetailTaskHelperJP"/>						
+				<sf:include name="RetailTaskHelperJPTest"/>				
 			</sf:typeset>
 			<sf:typeset name="triggers">
 				<sf:include name="TriggerUtilTestTrigger"/>
 				<sf:include name="CaseTrigger"/>
 				<sf:include name="TriggerDMRequest"/>
 				<sf:include name="TriggerLead"/>
+				<sf:include name="RetailTaskTrigger"/>				
 			</sf:typeset>
 		</deploy>
     </target>
@@ -522,7 +527,7 @@
 		</sf:typeset>
 		<sf:typeset name="triggers">
 			<sf:include name="TriggerAccountLink"/>
-			<sf:include name="TaskTrigger"/>
+			<sf:include name="TaskTrigger"/>			
 		</sf:typeset>	
 		</deploy>				
     </target>
