--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -569,6 +569,7 @@ post:Role:Sales_Deputy_Manager:AAABTIBnJeM=
 post:Role:Sales_Manager:AAABTIBnKeM=
 post:Role:Sales_Deputy_Director:AAABTIBnIeM=
 post:Role:Sales_Vice_President:AAABTIBnLeM=
+post:Report:Happy_Calls_CS_Report:AAABTIBaLeM=
 post:AccountCriteriaBasedSharingRule:MBK_Account_Record_Permission_to_All_Users:AAABTIBnBeM=
 pre:CampaignCriteriaBasedSharingRule:MBK_Campaign_Record_Permission_to_All_Users:AAABTIBnBeM=
 post:CaseCriteriaBasedSharingRule:MBK_Case_Record_Permission_to_All_Users:AAABTIBnBeM=
