--- a/build.xml
+++ b/build.xml
@@ -294,6 +294,7 @@
 				<sf:include name="UtilTaskTest"/>
 				<sf:include name="TriggerAccountTriggerHandlerJP"/>
 				<sf:include name="TriggerCaseTriggerHandlerJP"/>
+				<sf:include name="TriggerCaseTriggerHandlerKR"/>
 				<sf:include name="TriggerDMRequestTriggerHandlerJP"/>
 				<sf:include name="DMRequestHelperJP"/>
 				<sf:include name="DMRequestHelperJPTest"/>
