--- a/build.xml
+++ b/build.xml
@@ -153,6 +153,8 @@
 			   <sf:include name="ViewHierarchyController"/>
 			   <sf:include name="ViewHierarchyControllerTest"/>
 			   <sf:include name="AddressSearchValidationController"/>
+			   <sf:include name="crmasiaDaimlerApacComCustomeridentif"/>
+			   <sf:include name="crmasiaDaimlerApacComSarinotificatio"/>
 			   <sf:include name="UtilWebservice"/>
 			   <sf:include name="crmasiaDaimlerApacComValidateaddress"/>
 			   <sf:include name="AddressSearchValidationControllerTest"/>
