--- a/src/main/transformations/dev_sb_asia_dev4/token.properties
+++ b/src/main/transformations/dev_sb_asia_dev4/token.properties
@@ -32,6 +32,7 @@ OBJECT_LEAD_UCID=00N2800000A9CnE
 OBJECT_CAMPAIGN_WEBLINK_CAC_CAMPAIGN_RECORD_TYPE_ID=012O000000058VO
 OBJECT_CAMPAIGN_WEBLINK_COMPLEX_EXECUTION_RECORD_TYPE_ID=012O000000058VR
 OBJECT_CAMPAIGN_WEBLINK_SIMPLE_EXECUTION_RECORD_TYPE_ID=012O000000058VQ
+OBJECT_CAMPAIGN_RECORDTYPE_CAC_CAMPAIGN_ID=012280000006I7d
 
 CENTRAL_OFFICE_QUEUE_ID=00Gp0000000Mbrv
 
