Deleted Task field

--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -269,6 +269,7 @@
 #post:Role:Sales_Deputy_Manager:AAABTIBnJeM=
 #post:Role:Sales_Manager:AAABTIBnKeM=
 #post:Role:Sales_Vice_President:AAABTIBnLeM=
+Pre:CustomField:Activity.Communication_date__c:AAABXXXAgAQ=
 post:ApexClass:TaskFailBlacklistTrigger_TestClass:AAABTLiXZF1=
 post:ApexClass:DeploymentUtil:AAABTLiXZF0=
 post:ApexClass:DeploymentUtilTest:AAABTLiXZF0=
@@ -565,7 +566,7 @@ post:Role:AfterSales_Deputy_Manager:AAABTIBnAeM=
 post:Role:AfterSales_Assistant_Manager:AAABTIBnAeM=
 post:Role:AfterSales_Manager:AAABTIBnAeM=
 post:Role:AfterSales_Deputy_Director:AAABTIBnAeM=
-Post:Role:Marketing_Deputy_Manager:AAABTIBnAeM=
+post:Role:Marketing_Deputy_Manager:AAABTIBnAeM=
 post:Role:Marketing_Assistant_Manager:AAABTIBnAeM=
 post:Role:Marketing_Executive:AAABTIBnAeM=
 post:Role:Marketing_Manager:AAABTIBnFeM=
