Deleted Not Used task fields SFDCJP-596

--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -207,6 +207,7 @@
 #pre:CustomField:Activity.R_Successful_OB_Call__c:AAABTPDumAw=
 #post:CustomField:DM_Request__c.Sending_Address__c:AAABUT3dRIs=
 #pre:CustomField:Lead__c.Preferred_Contact_Date__c:AAABUD3dX09=
+#Post:CustomField:Activity.Activity_Comment__c:
 post:ApexClass:DeploymentUtil:AAABTLiXZF0=
 post:ApexClass:DeploymentUtilTest:AAABTLiXZF0=
 post:CustomField:Case.Case_Sub_Type__c:AAABTNb8szQ=
@@ -356,4 +357,17 @@ post:CustomField:Vehicle_Relationship__c.Warranty_Apply_Flag__c:AAABUtBTvDf=
 post:CustomField:Vehicle_Relationship__c.Sales_Type__c:AAABUtBTvDo=
 post:CustomField:Account.Customer_Attributes_UpdatedDate__c:AAABUtBTvDy=
 post:CustomField:Lead__c.Customer_Informaiotn__c:AAABUtBTvVZ
-
+post:CustomField:Activity.Activity_InboundCallNumber__c:AAABWD5kZ0w=
+post:CustomField:Activity.Activity_InboundExtNumber__c:AAABWD5kamA=
+post:CustomField:Activity.Activity_Info__c:AAABWD5kbNI=
+post:CustomField:Activity.Activity_LeadsData__c:AAABWD5kb8E=
+post:CustomField:Activity.Activity_OutboundCallSource__c:AAABWD5kc8g=
+post:CustomField:Activity.Activity_OutboundSubCallSource__c:AAABWD5kdxs=
+post:CustomField:Activity.Adhoc_eDM_Template_ID__c:AAABWD5kg2w=
+post:CustomField:Activity.BlacklistSensitiveWord__c:AAABWD5khkE=
+post:CustomField:Activity.More_Than_2_OB_Times__c:AAABWD5kie8=
+post:CustomField:Activity.Recording_ID__c:AAABWD5kjME=
+post:CustomField:Activity.Resource_Required__c:AAABWD5kj5o=
+post:CustomField:Activity.SMSBatchNumber__c:AAABWD5kkkE=
+post:CustomField:Activity.UniqueCode__c:AAABWD5klJw=
+post:CustomField:Retail_Task__c.Contractor_Company_Esatblished_Date__c:AAABWDxXxJw=
