--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -207,7 +207,6 @@
 #pre:CustomField:Activity.R_Successful_OB_Call__c:AAABTPDumAw=
 #post:CustomField:DM_Request__c.Sending_Address__c:AAABUT3dRIs=
 #pre:CustomField:Lead__c.Preferred_Contact_Date__c:AAABUD3dX09=
-#Post:CustomField:Activity.Activity_Comment__c:
 post:ApexClass:DeploymentUtil:AAABTLiXZF0=
 post:ApexClass:DeploymentUtilTest:AAABTLiXZF0=
 post:CustomField:Case.Case_Sub_Type__c:AAABTNb8szQ=
@@ -371,3 +370,4 @@ post:CustomField:Activity.Resource_Required__c:AAABWD5kj5o=
 post:CustomField:Activity.SMSBatchNumber__c:AAABWD5kkkE=
 post:CustomField:Activity.UniqueCode__c:AAABWD5klJw=
 post:CustomField:Retail_Task__c.Contractor_Company_Esatblished_Date__c:AAABWDxXxJw=
+Post:CustomField:Activity.Activity_Comment__c:AABCDDxXxJw=
