Changes for previous build failure

--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -595,3 +595,4 @@ post:CustomField:Activity.Recording_ID__c:AAABWD5kjME=
 post:CustomField:Activity.Resource_Required__c:AAABWD5kj5o=
 post:CustomField:Activity.SMSBatchNumber__c:AAABWD5kkkE=
 post:CustomField:Activity.UniqueCode__c:AAABWD5klJw= 
+post:ReportType:Vehicle_VehicleRel:ABBBWD5klJw=
