Added the profile tEST uSER IN DESTRUCTIVE FILE

--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -595,4 +595,5 @@ post:CustomField:Activity.Recording_ID__c:AAABWD5kjME=
 post:CustomField:Activity.Resource_Required__c:AAABWD5kj5o=
 post:CustomField:Activity.SMSBatchNumber__c:AAABWD5kkkE=
 pre:CustomField:Activity.UniqueCode__c:AAABWD5klJw= 
-post:CustomField:Lead__c.Purchased_VIN__c:AAABUtBbvTZ
+post:CustomField:Lead__c.Purchased_VIN__c:AAABUtBbvTZ=
+pre:Profile:'Test User':ADDDUtBbvTZ=
