--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -182,6 +182,18 @@ post:CustomObject:Trigger_Enabled__c:AAABTPCgq64=
 post:ApexTrigger:ShareCampaignByClooaboration:AAABTPCgwhw=
 post:CustomField:Account.Mail_Status__c:AAABTPCgyXo=
 post:CustomField:Retail_Task__c.LDCL_Contract_Id__c:AAABTPCgzqo=
+post:CustomField:Activity.Activity_InboundCallNumber__c:AAABWEQoz/0=
+post:CustomField:Activity.Activity_InboundExtNumber__c:AAABWEQo1Eo=
+post:CustomField:Activity.Activity_LeadsData__c:AAABWEQo2MY=
+post:CustomField:Activity.Activity_OutboundCallSource__c:AAABWEQo3gU=
+post:CustomField:Activity.Activity_OutboundSubCallSource__c:AAABWEQo4kA=
+post:CustomField:Activity.Adhoc_eDM_Template_ID__c:AAABWEQo7l4=
+post:CustomField:Activity.BlacklistSensitiveWord__c:AAABWEQo8ng=
+post:CustomField:Activity.More_Than_2_OB_Times__c:AAABWEQo98g=
+post:CustomField:Activity.Recording_ID__c:AAABWEQo/Fc=
+post:CustomField:Activity.Resource_Required__c:AAABWEQpAN4=
+post:CustomField:Activity.SMSBatchNumber__c:AAABWEQpBTM=
+post:CustomField:Activity.UniqueCode__c:AAABWEQpCis=
 pre:CustomField:Activity.R_Called_Type__c:AAABTPDkTdA=
 pre:CustomField:Activity.R_Check_activity_date__c:AAABTPDuPrQ=
 pre:CustomField:Activity.R_Check_Activity_Status__c:AAABTPDuRLM=
