--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -581,7 +581,7 @@ post:CustomField:Account_Link__c.Customer_ID__c:AAABV5jbxDM=
 post:CustomField:Account_Link__c.Personal_Information_Third_Party_Release__c:AAACV5jbxDM=
 post:CustomField:Account_Link__c.Personal_Abroad_Agreement__c:AAADV5jbxDM=
 post:CustomField:Account_Link__c.Personal_Agreement__c:AAAEV5jbxDM=
-Post:CustomField:Activity.Activity_Comment__c:AAABVxybxDM=
+post:CustomField:Activity.Activity_Comment__c:AAABVxybxDM=
 post:CustomField:Activity.Activity_InboundCallNumber__c:AAABWD5kZ0w=
 post:CustomField:Activity.Activity_InboundExtNumber__c:AAABWD5kamA=
 post:CustomField:Activity.Activity_Info__c:AAABWD5kbNI=
@@ -594,6 +594,6 @@ post:CustomField:Activity.More_Than_2_OB_Times__c:AAABWD5kie8=
 post:CustomField:Activity.Recording_ID__c:AAABWD5kjME=
 post:CustomField:Activity.Resource_Required__c:AAABWD5kj5o=
 post:CustomField:Activity.SMSBatchNumber__c:AAABWD5kkkE=
-pre:CustomField:Activity.UniqueCode__c:AAABWD5klJw= 
+pre:CustomField:Activity.UniqueCode__c:AAABWD5klJw=
 post:CustomField:Lead__c.Purchased_VIN__c:AAABUtBbvTZ=
 pre:Profile:'Test User':ADDDUtBbvTZ=
