--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -371,3 +371,4 @@ post:CustomField:Activity.SMSBatchNumber__c:AAABWD5kkkE=
 post:CustomField:Activity.UniqueCode__c:AAABWD5klJw=
 post:CustomField:Retail_Task__c.Contractor_Company_Esatblished_Date__c:AAABWDxXxJw=
 Post:CustomField:Activity.Activity_Comment__c:AABCDDxXxJw=
+post:CustomField:Lead__c.Purchased_VIN__c:AAABUtBbvTZ=
