--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -600,7 +600,9 @@ pre:Profile:'Test User':ADDDUtBbvTZ=
 pre:CustomField:Account.Age__c:ADDDUtBbzTZ=
 pre:Report:Vehicle_Class_And_Model:ADDDUzBbzTZ=
 pre:Report:MBK_Reports_Vehicle_Class_and_Model:ADDDZzBbzZZ=
-
+pre:Report:Sales_Funnel_Report:ADDDZzFbzZZ=
+  
+   
   
 
 
