Removed dummy reports from MBK folders

--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -598,7 +598,21 @@ pre:CustomField:Activity.UniqueCode__c:AAABWD5klJw=
 post:CustomField:Lead__c.Purchased_VIN__c:AAABUtBbvTZ=
 pre:Profile:'Test User':ADDDUtBbvTZ=
 pre:CustomField:Account.Age__c:ADDDUtBbzTZ=
-pre:Report:Vehicle_Class_And_Model:ADDDUzBbzTZ=
-pre:Report:MBK_Reports_Vehicle_Class_and_Model:ADDDZzBbzZZ=
+post:Report:Vehicle_Class_And_Model:ADDDUzBbzTZ=
+post:Report:MBK_Reports_Vehicle_Class_and_Model:ADDDZzBbzZZ=
+post:Report:Customer_by_Job:ADDDZzBbzYX=
+post:Report:CustomerInfo_108months_afterregistration:ADDDUzBbyTZ=
+post:Report:CustomerInfo_11months_after_registration:ADDDUzBbxTZ=
+post:Report:CustomerInfo_23months_after_registration:ADDDUzBbtTZ=
+post:Report:CustomerInfo_2_months_after_registration:ADDDUzBbuTZ=
+post:Report:CustomerInfo_35months_after_registration:ADDDUzBvzTZ=
+post:Report:CustomerInfo_5_months_after_registration:ADDDUzBbsTZ=
+post:Report:CustomerInfo_71months_after_registration:ADDDUzBZzTZ=
+post:Report:Happy_Calls_CS_Report:ADDDUzBbzTS=
+post:Report:Happy_Calls_Survey_Report:ADDDUzBbzSZ=
+post:Report:NCBS_PPSReport:ADDDUzBbzTY=
+post:Report:NCBS_PPS_Reports:ADDDUzBbzTX=
+post:Report:Sales_Funnel_Report:ADDDUzBbzTW=
+post:Report:Survey_Report_After_Servicing_Completion:ADDDUzBbzWZ=
 
 
