--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -614,6 +614,21 @@ post:Report:NCBS_PPSReport:ADDDUzBbzTY=
 post:Report:NCBS_PPS_Reports:ADDDUzBbzTX=
 post:Report:Sales_Funnel_Report:ADDDUzBbzTW=
 post:Report:Survey_Report_After_Servicing_Completion:ADDDUzBbzWZ=
+post:Report:Age_Group_Point_of_Purchase_Report:ADDDZzBbyTZ=
+post:Report:Gender_by_Age_Report:ADDDYzBbxTZ=
+post:Report:MBK_Report_Raw_Data_Report:ADDDXzBbtTZ=
+post:Report:MBK_Reports_Age_Group_by_Car_Segments:ADDDWzBbuTZ=
+post:Report:MBK_Reports_Age_Group_by_Year:ADDDUuBvzTZ=
+post:Report:MBK_Reports_Age_Range_by_Vehicle_Model:ADDDVzBbsTZ=
+post:Report:MBK_Reports_Campaign_Code_and_Car_Mode:ADDDSzBZzTZ=
+post:Report:MBK_Reports_Customer_by_City_Province:ADDDUtBbyTZ=
+post:Report:MBK_Reports_Gender_by_Vehicle_Model:ADDDUwBbxTZ=
+post:Report:MBK_Reports_Hobby_By_Vehicle_Model:ADDDUvBbtTZ=
+post:Report:MBK_Reports_Ownership_Report:ADDDUzVbuTZ=
+post:Report:MBK_Reports_Total_Number_of_Customer:ADDDUzZvzTZ=
+post:Report:MBk_Reports_Age_Group_Campaign_Code:ADDDUzWbsTZ=
+
+
 
 
 
