--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -370,5 +370,7 @@ post:CustomField:Activity.Resource_Required__c:AAABWD5kj5o=
 post:CustomField:Activity.SMSBatchNumber__c:AAABWD5kkkE=
 post:CustomField:Activity.UniqueCode__c:AAABWD5klJw=
 post:CustomField:Retail_Task__c.Contractor_Company_Esatblished_Date__c:AAABWDxXxJw=
-Post:CustomField:Activity.Activity_Comment__c:AABCDDxXxJw=
+post:CustomField:Activity.Activity_Comment__c:AABCDDxXxJw=
 post:CustomField:Lead__c.Purchased_VIN__c:AAABUtBbvTZ=
+post:CustomField:Lead__c.Dealer_Comment__c:AAABWE29Skk=
+post:CustomField:Lead__c.Preferred_Dropoff_Time__c:AAABWE29TVY=
