Removed field Account_Link__c.Retail_Consent_From_Serial_No__c

--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -581,6 +581,7 @@ post:CustomField:Account_Link__c.Customer_ID__c:AAABV5jbxDM=
 post:CustomField:Account_Link__c.Personal_Information_Third_Party_Release__c:AAACV5jbxDM=
 post:CustomField:Account_Link__c.Personal_Abroad_Agreement__c:AAADV5jbxDM=
 post:CustomField:Account_Link__c.Personal_Agreement__c:AAAEV5jbxDM=
+post:CustomField:Account_Link__c.Retail_Consent_From_Serial_No__c:ADDEV5jbxDM=
 post:CustomField:Activity.Activity_Comment__c:AAABVxybxDM=
 post:CustomField:Activity.Activity_InboundCallNumber__c:AAABWD5kZ0w=
 post:CustomField:Activity.Activity_InboundExtNumber__c:AAABWD5kamA=
