SFDCJP-607 and SFDCJP-602

--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -269,7 +269,7 @@
 #post:Role:Sales_Deputy_Manager:AAABTIBnJeM=
 #post:Role:Sales_Manager:AAABTIBnKeM=
 #post:Role:Sales_Vice_President:AAABTIBnLeM=
-Pre:CustomField:Activity.Communication_date__c:AAABXXXAgAQ=
+pre:CustomField:Activity.Communication_date__c:AAABXXXAgAQ=
 post:ApexClass:TaskFailBlacklistTrigger_TestClass:AAABTLiXZF1=
 post:ApexClass:DeploymentUtil:AAABTLiXZF0=
 post:ApexClass:DeploymentUtilTest:AAABTLiXZF0=
@@ -585,17 +585,17 @@ post:CustomObjectCriteriaBasedSharingRule:Vehicle__c.MBK_Vehicle_Record_Permissi
 post:Role:Deputy_Director:AAABTIKTLeM=
 post:Role:Assistant_Manager :AAABPlNnBeM=
 post:Role:Deputy_Manager:AAABTIKTLeM=
-pre:CustomField:Lead__c.UCID__c:AAABV5jnxDM= 
+pre:CustomField:Lead__c.UCID__c:AAABV5jnxDM=
 post:CustomField:Retail_Task__c.Related_Contact_2__c:AAABV5Q+wnI=
 post:CustomField:Retail_Task__c.Related_Contact_3__c:AAABV5Q+xSA=
 post:CustomField:Lead__c.Purchased_VIN__c:AAABV5Q+xXA=
 post:CustomField:User.DMS_User_ID__c:AAABV5Q+xXy=
-post:CustomField:Account_Link__c.Customer_ID__c:AAABV5jbxDM= 
+post:CustomField:Account_Link__c.Customer_ID__c:AAABV5jbxDM=
 post:CustomField:Account_Link__c.Customer_ID__c:AAABV5jbxDM=
 post:CustomField:Account_Link__c.Personal_Information_Third_Party_Release__c:AAACV5jbxDM=
 post:CustomField:Account_Link__c.Personal_Abroad_Agreement__c:AAADV5jbxDM=
-post:CustomField:Account_Link__c.Personal_Agreement__c:AAAEV5jbxDM= 
-Post:CustomField:Activity.Activity_Comment__c:AAABVxybxDM=
+post:CustomField:Account_Link__c.Personal_Agreement__c:AAAEV5jbxDM=
+post:CustomField:Activity.Activity_Comment__c:AAABVxybxDM=
 post:CustomField:Activity.Activity_InboundCallNumber__c:AAABWD5kZ0w=
 post:CustomField:Activity.Activity_InboundExtNumber__c:AAABWD5kamA=
 post:CustomField:Activity.Activity_Info__c:AAABWD5kbNI=
@@ -643,6 +643,4 @@ post:Report:MBK_Reports_Total_Number_of_Customer:ADDDUzZvzTZ=
 post:Report:MBk_Reports_Age_Group_Campaign_Code:ADDDUzWbsTZ=
 post:CustomField:Retail_Task__c.Contractor_Company_Esatblished_Date__c:AAACWZ5klJw=
 
-
-
-
+  
