--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -630,6 +630,9 @@ post:Report:MBK_Reports_Total_Number_of_Customer:ADDDUzZvzTZ=
 post:Report:MBk_Reports_Age_Group_Campaign_Code:ADDDUzWbsTZ=
 post:CustomField:Account.Customer_Consent_Happy_Calls__c:AAABWGy0NFM=
 post:CustomField:Account.Customer_Consent__c:AAABWGy0N9Y=
+post:CustomField:Account.Personal_Abroad_Agreement__c:AAABWGy0Khk=
+post:CustomField:Account.Personal_Agreement__c:AAABWGy0LX4=
+post:CustomField:Account.Personal_Information_Third_Party_Release__c:AAABWGy0MbI=
 
 
 
