--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -644,7 +644,12 @@ post:Report:MBk_Reports_Age_Group_Campaign_Code:ADDDUzWbsTZ=
 post:CustomField:Retail_Task__c.Contractor_Company_Esatblished_Date__c:AAACWZ5klJw=
 post:CustomField:Account.Personal_Information_Third_Party_Release__c:AAACS5jbxDM=
 post:CustomField:Account.Personal_Abroad_Agreement__c:AAADJ5jbxDM=
-post:CustomField:Account.Personal_Agreement__c:AAALV5jbxDM=
+post:CustomField:Account.Personal_Agreement__c:AAALV5HbxDM=
+   
+      
+	     
+		    
+			
      
 	 
 	 
