--- a/src/main/transformations/uat_int_hf_sb_au_full/token.properties
+++ b/src/main/transformations/uat_int_hf_sb_au_full/token.properties
@@ -6,6 +6,10 @@ OBJECT_CAMPAIGN_WEBLINK_SIMPLE_EXECUTION_RECORD_TYPE_ID=012170000000Iju
 
 CENTRAL_OFFICE_QUEUE_ID=00G17000000H1lB
 
+OBJECT_TASK_WEBLINK_CHANGE_OWNER_RECORDTYPEID=0123B00000009Gm
+OBJECT_TASK_WEBLINK_REMOVE_ACCOUNT_RECORDTYPEID=0123B00000009eU
+OBJECT_TASK_WEBLINK_TASK_TAB_ID=00T
+
 OBJECT_CAMPAIGN_LEAD_WEBLINK_OBJECT_KEYPREFIX=a0u
 OBJECT_CAMPAIGN_LEAD_WEBLINK_LEAD_FIELD_ID=CF00NO0000001atjl
 OBJECT_CAMPAIGN_LEAD_WEBLINK_LEAD_FIELD_LKID=CF00NO0000001atjl_lkid
