--- a/src/main/transformations/prod_sb_au_prod/token.properties
+++ b/src/main/transformations/prod_sb_au_prod/token.properties
@@ -6,6 +6,10 @@ OBJECT_CAMPAIGN_WEBLINK_SIMPLE_EXECUTION_RECORD_TYPE_ID=0121a000000V7Kp
 
 CENTRAL_OFFICE_QUEUE_ID=00GO0000001btlC
 
+OBJECT_TASK_WEBLINK_CHANGE_OWNER_RECORDTYPEID=0123B00000009Gm
+OBJECT_TASK_WEBLINK_REMOVE_ACCOUNT_RECORDTYPEID=0123B00000009eU
+OBJECT_TASK_WEBLINK_TASK_TAB_ID=00T
+
 OBJECT_CAMPAIGN_LEAD_WEBLINK_OBJECT_KEYPREFIX=a0q
 OBJECT_CAMPAIGN_LEAD_WEBLINK_LEAD_FIELD_ID=CF00NO0000001aohV
 OBJECT_CAMPAIGN_LEAD_WEBLINK_LEAD_FIELD_LKID=CF00NO0000001aohV_lkid
