Changes field type in Account

--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -377,6 +377,11 @@ post:CustomField:Activity.Activity_Comment__c:AABCDDxXxJw=
 post:CustomField:Lead__c.Purchased_VIN__c:AAABUtBbvTZ=
 post:CustomField:Lead__c.Dealer_Comment__c:AAABWE29Skk=
 post:CustomField:Lead__c.Preferred_Dropoff_Time__c:AAABWE29TVY=
+pre:CustomField:Account.Personal_Abroad_Agreement__c:AAABWGy0Khk=
+pre:CustomField:Account.Personal_Agreement__c:AAABWGy0LX4=
+pre:CustomField:Account.Personal_Information_Third_Party_Release__c:AAABWGy0MbI=
+pre:CustomField:Account.Customer_Consent_Happy_Calls__c:AAABWGy0NFM=
+pre:CustomField:Account.Customer_Consent__c:AAABWGy0N9Y=
 
 
 
