Added new field in Account

--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -633,6 +633,8 @@ post:CustomField:Account.Customer_Consent__c:AAABWGy0N9Y=
 post:CustomField:Account.Personal_Abroad_Agreement__c:AAABWGy0Khk=
 post:CustomField:Account.Personal_Agreement__c:AAABWGy0LX4=
 post:CustomField:Account.Personal_Information_Third_Party_Release__c:AAABWGy0MbI=
+pre:CustomField:Account.Retail_Agreement_to_commit_info_processing__c:ACCBWGy0MbI=
+
 
 
 
