--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -382,6 +382,7 @@ pre:CustomField:Account.Personal_Agreement__c:AAABWGy0LX4=
 pre:CustomField:Account.Personal_Information_Third_Party_Release__c:AAABWGy0MbI=
 pre:CustomField:Account.Customer_Consent_Happy_Calls__c:AAABWGy0NFM=
 pre:CustomField:Account.Customer_Consent__c:AAABWGy0N9Y=
+pre:CustomField:Account.Agreement_to_commit_info_processing__c:ACCBWGy0MbI=
 
 
 
