--- a/build.xml
+++ b/build.xml
@@ -245,7 +245,7 @@
 				<sf:include name="Case"/>
 				<sf:include name="Task"/>
 				<sf:include name="Activity"/>
-				<sf:exclude name="Activity"/>
+				<!--<sf:exclude name="Activity"/>-->
 				<sf:include name="ContentVersion"/>
 				<sf:exclude name="Account"/>
 				<sf:exclude name="PersonAccount"/>
