--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -596,7 +596,7 @@ post:CustomField:Activity.Recording_ID__c:AAABWD5kjME=
 post:CustomField:Activity.Resource_Required__c:AAABWD5kj5o=
 post:CustomField:Activity.SMSBatchNumber__c:AAABWD5kkkE=
 pre:CustomField:Activity.UniqueCode__c:AAABWD5klJw=
-post:CustomField:Lead__c.Purchased_VIN__c:AAABUtBbvTZ=
+pre:CustomField:Lead__c.Purchased_VIN__c:AAABUtBbvTZ=
 pre:Profile:'Test User':ADDDUtBbvTZ=
 pre:CustomField:Account.Age__c:ADDDUtBbzTZ=
 post:Report:Vehicle_Class_And_Model:ADDDUzBbzTZ=
@@ -628,11 +628,11 @@ post:Report:MBK_Reports_Hobby_By_Vehicle_Model:ADDDUvBbtTZ=
 post:Report:MBK_Reports_Ownership_Report:ADDDUzVbuTZ=
 post:Report:MBK_Reports_Total_Number_of_Customer:ADDDUzZvzTZ=
 post:Report:MBk_Reports_Age_Group_Campaign_Code:ADDDUzWbsTZ=
-post:CustomField:Account.Customer_Consent_Happy_Calls__c:AAABWGy0NFM=
-post:CustomField:Account.Customer_Consent__c:AAABWGy0N9Y=
-post:CustomField:Account.Personal_Abroad_Agreement__c:AAABWGy0Khk=
-post:CustomField:Account.Personal_Agreement__c:AAABWGy0LX4=
-post:CustomField:Account.Personal_Information_Third_Party_Release__c:AAABWGy0MbI=
+pre:CustomField:Account.Personal_Abroad_Agreement__c:AAABWGy0Khk=
+pre:CustomField:Account.Customer_Consent__c:AAABWGy0N9Y=
+pre:CustomField:Account.Customer_Consent_Happy_Calls__c:AAABWGy0NFM=
+pre:CustomField:Account.Personal_Agreement__c:AAABWGy0LX4=
+pre:CustomField:Account.Personal_Information_Third_Party_Release__c:AAABWGy0MbI=
 
 
 
