--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -634,7 +634,7 @@ post:CustomField:Account.Personal_Abroad_Agreement__c:AAABWGy0Khk=
 post:CustomField:Account.Personal_Agreement__c:AAABWGy0LX4=
 post:CustomField:Account.Personal_Information_Third_Party_Release__c:AAABWGy0MbI=
 pre:CustomField:Account.Agreement_to_commit_info_processing__c:ACCBWGy0MbI=
-pre:CustomField:Account.RT_Agreement_commit_info_processing__c:ADDBWGy0MbI=	
+post:CustomField:Account_Link__c.RT_Agreement_commit_info_processing__c:AEECWGy0MbI=	
 
 
 
