--- a/build.xml
+++ b/build.xml
@@ -355,7 +355,9 @@
 				<sf:include name="RetailTaskTriggerHandlerJP"/>
 				<sf:include name="RetailTaskTriggerHandlerKR"/>
 				<sf:include name="RetailTaskHelperJP"/>						
-				<sf:include name="RetailTaskHelperJPTest"/>				
+				<sf:include name="RetailTaskHelperJPTest"/>
+				<sf:include name="UtilShare"/>
+				<sf:include name="LeadSharingforDealerJP"/>
 			</sf:typeset>
 			<sf:typeset name="triggers">
 				<sf:include name="TriggerUtilTestTrigger"/>
