--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -214,6 +214,9 @@ pre:CustomField:Activity.R_Smart_Hotline__c:AAABTPDujgc=
 pre:CustomField:Activity.R_Successful_Case_Amount__c:AAABTPDuk74=
 pre:CustomField:Activity.R_Successful_OB_Call__c:AAABTPDumAw=
 pre:CustomField:Rejected_Duplicate_Log__c.DUNumber__c:AAABTPDumBx=
+pre:CustomField:Account.Personal_Abroad_Agreement__c:AAABWJFKOeA=
+pre:CustomField:Account.Personal_Agreement__c:AAABWJFKPtg=
+pre:CustomField:Account.Personal_Information_Third_Party_Release__c:AAABWJFKQ7Y=
 post:CustomField:Account.Other_Information__c:AAABTUdMuMw=
 post:CustomField:Account.How_old_are_they__c:AAABTUdMwbU=
 post:CustomField:Account.Household_person1_age__c:AAABTUdMyOs=
