Modified token.property file

--- a/src/main/transformations/dev_sb_asia_dev9/token.properties
+++ b/src/main/transformations/dev_sb_asia_dev9/token.properties
@@ -21,7 +21,9 @@ OBJECT_CASE_VEHICLE_RELATIONSHIP_LKIED=CF00NO0000001wSIE_lkid
 OBJECT_CASE_Vehicle_ID=00NO0000001wSIA
 OBJECT_CASE_INQUIRY_RECORDTYPEID=012O000000058Vr
 OBJECT_CASE_CASE_DEALER_ID=CF00N2800000A9Ctz
+OBJECT_CASE_CASE_DEALER_ID_LKID=CF00N2800000A9Ctz_lkid
 OBJECT_CASE_CASE_DEALER_USER_ID=CF00N2800000A9Cty
+OBJECT_CASE_CASE_DEALER_USER_ID_LKID=CF00N2800000A9Cty_lkid
 OBJECT_CASE_ACCOUNT_ID=001O000000yLGsf
 OBJECT_LEAD_CASE_ID=CF00N2800000A9CjJ
  
