--- a/src/main/transformations/dev_sb_asia_uat/token.properties
+++ b/src/main/transformations/dev_sb_asia_uat/token.properties
@@ -25,6 +25,13 @@ OBJECT_CASE_VEHICLE_RELATIONSHIP_LKIED=00Np0000000Kdy6_lkid
 OBJECT_CASE_Vehicle_ID=00Np0000000Kdy2
 OBJECT_CASE_INQUIRY_RECORDTYPEID=012p00000008VJ1
 
+OBJECT_CASE_CASE_DEALER_ID=00Np0000000Kdtr
+OBJECT_CASE_CASE_DEALER_USER_ID=00N2800000A9Cty
+OBJECT_CASE_ACCOUNT_ID=001p0000003vUKO
+OBJECT_LEAD_CASE_ID=00Np0000000Kd57
+OBJECT_CASE_CASE_DEALER_ID_LKID=00Np0000000Kdtr_lkid
+OBJECT_CASE_CASE_DEALER_USER_ID_LKID=00N2800000A9Cty_lkid
+
 OBJECT_LEAD_CASE=CF00Np0000000Kd57
 OBJECT_lEAD_CASE_LKID=CF00Np0000000Kd57_lkid
 OBJECT_LEAD_ACCOUNT=CF00Np0000000Kd5G
