--- a/build.xml
+++ b/build.xml
@@ -257,7 +257,7 @@
 		</deploy>
     </target>	
 	<target name="deploy21">
-		<deploy  runAllTests="${sfdc.runAllTests}" transformations="transformations29.xml">
+		<deploy  runAllTests="${sfdc.runAllTests}" transformations="transformations.xml">
 			<sf:typeset name="objects">
 				<sf:include name="Case"/>
 				<sf:include name="Task"/>
