--- a/build.xml
+++ b/build.xml
@@ -372,7 +372,8 @@
 				<sf:include name="RetailTaskTriggerHandlerJP"/>
 				<sf:include name="RetailTaskTriggerHandlerKR"/>
 				<sf:include name="RetailTaskHelperJP"/>						
-				<sf:include name="RetailTaskHelperJPTest"/>				
+				<sf:include name="RetailTaskHelperJPTest"/>	
+				<sf:include name="LeadcustomClone"/>
 			</sf:typeset>
 			<sf:typeset name="triggers">
 				<sf:include name="TriggerUtilTestTrigger"/>
